--- a/app/index.html
+++ b/app/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="socialNetworkApp" ng-controller="AppController">
-<head>
+<html ng-app="socialNetworkApp">
+<head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <title>Social Network</title>
 </head>
 <body>
 
-<div class="main" id="main" ng-view>
-</div>
+<div ng-view></div>
 
-<script src="lib/angular/angular.js"></script>
-<script src="lib/angular/angular-route.js"></script>
-<script src="lib/angular/angular-resource.js"></script>
-<script src="lib/jquery/jquery-2.1.3.js"></script>
-<script src="lib/jquery.noty/jquery.noty.js"></script>
-<script src="lib/bootstrap/bootstrap-3.1.1.js"></script>
-<script src="lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
-<script src="/node_modules/angular/angular.js"></script>
-<script src="/node_modules/angular-aria/angular-aria.js"></script>
-<script src="/node_modules/angular-animate/angular-animate.js"></script>
-<script src="/node_modules/angular-material/angular-material.js"></script>
+<footer ng-include="'templates/footer.html'"></footer>
 
-<!-- Load app source code: main script, services, controllers, etc. -->
-<script src="js/app.js"></script>
+<script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="lib/angular/angular.js"></script>
+<script type="text/javascript" src="lib/angular/angular-route.js"></script>
+<script type="text/javascript" src="lib/angular/angular-resource.js"></script>
+<script type="text/javascript" src="lib/angular/angular-animate.js"></script>
+<script type="text/javascript" src="lib/ngStorage.js"></script>
+<script type="text/javascript" src="lib/toaster.js"></script>
+<script type="text/javascript" src="lib/angular-base64-upload.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.js"></script>
 
-<script src="js/services/notifyService.js"></script>
-<script src="js/services/userService.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
-<script src="js/controllers/appController.js"></script>
-<script src="js/controllers/homeController.js"></script>
-<script src="js/controllers/loginController.js"></script>
-<script src="js/controllers/registerController.js"></script>
+<script type="text/javascript" src="js/controllers/HomeController.js"></script>
+
+<script type="text/javascript" src="js/directives/friendRequests.js"></script>
+<script type="text/javascript" src="js/directives/friendsSidebar.js"></script>
+<script type="text/javascript" src="js/directives/usersSearchResults.js"></script>
+<script type="text/javascript" src="js/directives/posts.js"></script>
+<script type="text/javascript" src="js/directives/editPost.js"></script>
+<script type="text/javascript" src="js/directives/newComment.js"></script>
+<script type="text/javascript" src="js/directives/editComment.js"></script>
+
+<script type="text/javascript" src="js/services/credentials.js"></script>
+<script type="text/javascript" src="js/services/data/userData.js"></script>
+<script type="text/javascript" src="js/services/data/friendsData.js"></script>
+<script type="text/javascript" src="js/services/data/postData.js"></script>
+<script type="text/javascript" src="js/services/data/commentData.js"></script>
 
 </body>
-
-<footer ng-include="'partials/footer.html'"></footer>
-
 </html>
